Integrate Flask with GAE

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -9,8 +9,10 @@ handlers:
   static_dir: css
 
 - url: .*
-  script: main.application
+  script: main.app
 
 libraries:
 - name: jinja2
   version: latest
+- name: markupsafe
+  version: "0.15"
